--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <img src="Images/bg7.webp" style="width: 100%; height: 550px;">
                 <p style="color: white; font-size: 40px; font-weight: 400; margin-top: -480px; margin-left: 150px;">NEW RAZER BLADE 14</p>
                 <p style="color: white; font-size: 20PX; font-weight: 50; margin-top:-40px; margin-left: 225px;">SMALL SIZE.BIG PERFOMANCE.</p>
-                <p style="color: white; font-size: 20PX; font-weight: 50; margin-top:-15px; margin-left: 285px;">Learn More <p class="arro">></p>&emsp;Buy ></p>
+                <p style="color: white; font-size: 20PX; font-weight: 50; margin-top:-15px; margin-left: 285px;">Learn More >&emsp;Buy ></p>
 
             </div>
         </div>
